fixed contact section on mobile devices

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -196,7 +196,7 @@
 .contactMe {
   background-color: var(--gray);
   padding-top: 40px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding-bottom: 200px;
